--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 </head>
 <body>
     <div class="gallery">
-        <img class="active" src="./consegna/img/01.webp" alt="">
-        <img src="./consegna/img/02.webp" alt="">
-        <img src="./consegna/img/03.webp" alt="">
-        <img src="./consegna/img/04.webp" alt="">
-        <img src="./consegna/img/05.webp" alt="">
+        <img class="active img" src="./consegna/img/01.webp" alt="">
+        <img class="img" src="./consegna/img/02.webp" alt="">
+        <img class="img" src="./consegna/img/03.webp" alt="">
+        <img class="img" src="./consegna/img/04.webp" alt="">
+        <img class="img" src="./consegna/img/05.webp" alt="">
     </div>
     <script src="./js/app.js"></script>
 </body>
