Add css style and js structure for carousel img

--- a/index.html
+++ b/index.html
@@ -4,36 +4,21 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="#">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-    <style>
-        .gallery {
-            min-height: 100vh;
-            display: flex;
-            gap: 10px;
-            flex-wrap: wrap;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .gallery > * {
-            display: none;
-            width: 500px;
-        }
-
-        .gallery .active {
-            display: block;
-        }
-    </style>
+    <title>Correzione Corousel JS</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="gallery">
-        <!-- <img class="active img" src="./consegna/img/01.webp" alt="">
-        <img class="img" src="./consegna/img/02.webp" alt="">
-        <img class="img" src="./consegna/img/03.webp" alt="">
-        <img class="img" src="./consegna/img/04.webp" alt="">
-        <img class="img" src="./consegna/img/05.webp" alt=""> -->
-    </div>
+
+    <section>
+        <div class="container">
+            <div class="carousel">
+                <div class="arrow arrow--top"></div>
+                <div class="arrow arrow--bottom"></div>
+            </div>
+        </div>
+    </section>
+
     <script src="./js/app.js"></script>
 </body>
+
 </html>
